--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1, h2 {
     color: #B89C52;
 }
 header.hero {
-    background: url('tallinn_background.png') no-repeat center center/cover;
+    background: url('image.png') no-repeat center center/cover;
     height: 90vh;
     min-height: 600px;
     text-align: center;
