--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1, h2 {
     color: #B89C52;
 }
 header.hero {
-    background: url('image.png') no-repeat center center/cover;
+    background: url('tallinn_background.png') no-repeat center center/cover;
     height: 90vh;
     min-height: 600px;
     text-align: center;
@@ -19,9 +19,20 @@ header.hero {
     justify-content: center;
     align-items: center;
 }
+header.small-hero {
+    background: url('smallhero.jpg') no-repeat center center/cover;
+    height: 50vh;
+    min-height: 300px;
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .main-logo {
-    width: 150px;
-    margin-bottom: 20px;
+    width: 15px;
+    margin-bottom: 2px;
 }
 .logo-small {
     height: 40px;
