--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,10 @@ footer {
   font-size: 0.5rem;
   margin-top: 20px;
 }
+a {
+    color: #B89C52;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
