--- a/styles.css
+++ b/styles.css
@@ -50,11 +50,8 @@ header.small-hero > * {
     margin-bottom: 20px;
 }
 .logo-small {
-    height: 95px;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index:10;
+    height: 100px;
+    margin-bottom: 20px;
 }
 .nav-centered {
     display: flex;
